[package]
name = "tui-tabs"
version = "0.1.0"
edition = "2024"
description = "A tab navigation widget for Ratatui with bordered boxes and rounded corners"
license = "MIT OR Apache-2.0"
keywords = ["tui", "ratatui", "tabs", "widget"]
categories = ["command-line-interface"]
repository = "https://github.com/jharsono/tui-tabs"
readme = "README.md"
rust-version = "1.85"
exclude = ["screenshots/"]

[dependencies]
ratatui-core = "0.1.0"

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.30", features = ["crossterm"] }
